--- a/curso_intro_datascience/Apostilas/UFPA_Curso_TecComp_00_2019.Rnw
+++ b/curso_intro_datascience/Apostilas/UFPA_Curso_TecComp_00_2019.Rnw
@@ -27,7 +27,7 @@
 
 \program{Graduação e Pós-Graduação em Economia}
 
-\title{Introdução ao Tratamento e Análise de Dados em R}
+\title{Introdução ao Tratamento  \\ e Análise de Dados em R}
 
 
 %\subtitle{ou Data Science para todos!}
@@ -113,98 +113,33 @@ library(knitr)
 
 \SweaveInput{BP_Curso_TecComp_00_intro_2019.Rnw}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-%    CAPITULO 1
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \SweaveInput{BP_Curso_TecComp_00_c01_2019.Rnw}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-%    CAPITULO 2
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \SweaveInput{BP_Curso_TecComp_00_c04_2019.Rnw}
 
 
-
 \SweaveInput{BP_Curso_TecComp_00_c02_2019.Rnw}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-%    CAPITULO 3
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \SweaveInput{BP_Curso_TecComp_00_c03_2019.Rnw}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-%    CAPITULO 4
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-%    CAPITULO 5
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \SweaveInput{BP_Curso_TecComp_00_c06_2019.Rnw}
 
 
 \SweaveInput{BP_Curso_TecComp_00_c05_2019.Rnw}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-%    CAPITULO 6
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-%    CAPITULO 7
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %\SweaveInput{BP_Curso_TecComp_00_c07_2019.Rnw}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-%    CAPITULO 8
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 \SweaveInput{BP_Curso_TecComp_00_c08_2019.Rnw}
-
-
 
 
 %\bibliographystyle{unsrt}
 \bibliographystyle{alpha}
 \bibliography{../bib/bibliografia}
-
-%\appendix
-
-%\chapter{Tabelas demográficas}
-
-%\lipsum[12-16]
-
-%\begin{equation}
-%  \label{eq:C}
-%  \frac{\partial H}{\partial x} = -X
-%\end{equation}
-
-%\chapter{PeCiDAm}
-
-%\lipsum[16-22]
-
-
 
 
 \end{document}
