--- a/curso_intro_datascience/Aulas/UFPA_Curso_Presentation_03_00_2019.Rnw
+++ b/curso_intro_datascience/Aulas/UFPA_Curso_Presentation_03_00_2019.Rnw
@@ -24,6 +24,8 @@
 %\usepackage{abnt-alf}
 %\usepackage[alf]{abntcite}
 
+\usepackage{Sweave}
+
 \author{Sérgio Rivero}
 
 \title{Limpando e organizando seus dados}
